# moving_corr_sig

./: .gitignore  CHANGELOG.md  README.md  moving_corr_sig_demo.ipynb  pyproject.toml
moving_corr_sig/: __init__.py  core.py  tests.py
